# sparta

./: .gitignore  CMakeLists.txt  Readme.md  build-new-sample.config  build-new-sample.env  build-new.sh  meson.build  meson_options.txt
benchmark/: ttt.c
examples/: meson.build
include/includes/: sptensors.h  structs.h  vectors.h
src/sptensor/: cpd.c  cpd_omp.c  load.c  sort.c  tmul.c
src/sptensor/hicoo/: convert.c  cpd.c  cpd_omp.c
tests/: base_test.c  matrix_dump_test.c  matrix_fromsp_test.c  matrix_test.c  meson.build  rankmatrix_dump_test.c  rankmatrix_test.c  vector_block_index_test.c  vector_dump_test.c  vector_element_index_test.c  vector_index_test.c  vector_nnz_index_test.c  vector_sort.c  vector_value_test.c
tools/: gen_tns_itensor.py  gen_tns_nwchem.py  generate_tensor.py
